FW-2764: No longer forcing a restart (which does not cause the new setting to be used).  creating a "dummy default settings" property value, in the event none can be imported from existing sources.  Fixes the bug. Former-commit-id: ddc35d812cf3a976d3769ce770ead35adc3a7291