@@ -217,6 +217,11 @@ public class SystemInfo {
         File brandingConfig = getOrCreateBrandingConfigFile();
         Properties props = loadNbConfig( brandingConfig );
         String value = (String)props.get( DEFAULT_OPTIONS_PROP );
+        if ( value == null ) {
+            //Last-ditch effort to save settings.
+            value = "\"--branding janeliaws -J-Dapple.awt.brushMetalLook=false -J-XX:PermSize=192m -J-XX:MaxPermSize=1024m -J-Xms1024m -J-Xmx8192-J-Dnetbeans.exception.report.min.level=9999 -J-Dnb.forceui=de.javasoft.synthetica.netbeans.SyntheticaLFCustoms\"";
+            log.warn("Using local-constant version of settings, '{}'.  Unable to find old memory setting.", value);
+        }
         int optStart = value.indexOf(MEMORY_SETTING_PREFIX) + MEMORY_SETTING_PREFIX.length();
         int optEnd = value.indexOf( " ", optStart );
         
@@ -236,6 +241,10 @@ public class SystemInfo {
         File userSettingsDir = new File( System.getProperty("netbeans.user") );
         if ( ! userSettingsDir.toString().contains("testuserdir") ) {
             userSettingsDir = new File( userSettingsDir.toString(), ETC_SUBPATH );
+        }
+        if ( ! userSettingsDir.exists() ) {
+            // Ensure we have the etc dir.
+            userSettingsDir.mkdirs();
         }
         final String configFile = appnameToken + ".conf";
         File fqBrandingConfig = new File( userSettingsDir, configFile );
@@ -280,6 +289,9 @@ public class SystemInfo {
             }
             
         }
+        else {
+            log.info("Found the {} file. No need to copy new one.", fqBrandingConfig);
+        }
         
         return fqBrandingConfig;
     }
@@ -308,7 +320,9 @@ public class SystemInfo {
     
     private static Properties loadNbConfig( File infile ) throws IOException {
         Properties props = new Properties();
-        props.load( new FileInputStream( infile ) );
+        if ( infile.exists() ) {
+            props.load( new FileInputStream( infile ) );
+        }
         return props;
     }
     
